Add endpoint to get package's changelog (#794)
Related to #760
